# ChangeLog for xfce-base/libxfcegui4
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Dec 2007; Christoph Mende <angelos@gentoo.org> libxfcegui4-9999.ebuild:
  Sync dependencies with the main tree

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
