@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST libxfcegui4-4.5.92.tar.bz2 653354 RMD160 b8ada2f07acc57ad56f1250ac65e50e3b535d5b1 SHA1 c423f2c8fe09595926b5b4e24feed635a89e2433 SHA256 5fd60859578bad5241dbb990d7e4515caf89215e866d57dd4286989efcc97c5d
+EBUILD libxfcegui4-4.5.92.ebuild 619 RMD160 9e5006aa1a489f63f2ad6e156ecd9fd232cc7611 SHA1 fecd9f896a2afb5423172902ba5869b8edaafa81 SHA256 6b133b3f9696b3c2d024c7df97113eceec7cb4ea6128fe4779385458f0e1d09d
 EBUILD libxfcegui4-9999.ebuild 619 RMD160 9e5006aa1a489f63f2ad6e156ecd9fd232cc7611 SHA1 fecd9f896a2afb5423172902ba5869b8edaafa81 SHA256 6b133b3f9696b3c2d024c7df97113eceec7cb4ea6128fe4779385458f0e1d09d
-MISC ChangeLog 323 RMD160 d53920617fcc35174964ce2c5b18c91409ff4624 SHA1 84e5d9e48c31c40f1009f84aeee6227d738d1a26 SHA256 9a841080fd192fc51cff56fddb05afdc60ab02be1fd39658245465b74edcca9d
+MISC ChangeLog 464 RMD160 84eb923c385d0cc1bdadae27805ba7230deecfe2 SHA1 88f9d23eaf0958b301ddf0776c6e4187652aa5a4 SHA256 f79ee3e37edda5f713e9a41facc589a8d4a8ccdec28c0bc1c2aa3b2daae6f6c9
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa/utwCg+abukPDLNZD9rrxDhHyF1FHk
-Yv0AoMRL1MGpqnanhLfhRmSMAiM6op28
-=V0IC
+iEYEARECAAYFAkkdtiIACgkQKhnDs22gwa9jVgCg6z+YIAGgEn5CV8z2LoiQI66E
+PMsAoIE7PJLP2sxdVGUzLV5HgpuzlnJr
+=/lSi
 -----END PGP SIGNATURE-----
