@@ -1,0 +1,24 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=1
+
+inherit xfce4
+
+xfce4_core
+
+DESCRIPTION="Unified widgets library"
+HOMEPAGE="http://www.xfce.org/projects/libraries"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE="debug startup-notification"
+
+RDEPEND="gnome-base/libglade
+	x11-libs/libSM
+	x11-libs/libX11
+	>=x11-libs/gtk+-2.6:2
+	>=xfce-base/libxfce4util-${XFCE_VERSION}
+	>=xfce-base/xfconf-${XFCE_VERSION}
+	startup-notification? ( x11-libs/startup-notification )"
+
+DOCS="AUTHORS ChangeLog NEWS README TODO"
